[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/PowerUps/Teleport.gd" type="Script" id=1]
[ext_resource path="res://Art/PowerUps/Teleport/TeleportImpact.png" type="Texture" id=2]
[ext_resource path="res://Art/PowerUps/Teleport/TeleportPulse.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Audio/SfxPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Audio/TeleportSFX.wav" type="AudioStream" id=5]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0, 0.887574, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.523438, 0.523438, 0.523438, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]

flags = 4
gradient = SubResource( 1 )
width = 2048

[sub_resource type="Curve" id=3]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 0.0166016 ), 0.0, 4.13451, 0, 0, Vector2( 0.996887, 0.768555 ), -2.65428, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]

flags = 4
width = 2048
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 6.41795e-43
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Gravity", "Scale" ]

[node name="Teleport" type="Position2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="TriggerTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 0.05
one_shot = true
autostart = false

[node name="RayCast2D" type="RayCast2D" parent="." index="1"]

enabled = true
exclude_parent = true
cast_to = Vector2( -650, 0 )
collision_mask = 2
_sections_unfolded = [ "Transform" ]

[node name="Line2D" type="Line2D" parent="." index="2"]

points = PoolVector2Array( 0, 0, 0, 0 )
width = 3.0
default_color = Color( 0.461361, 0.189514, 0.527344, 1 )
texture_mode = 1000333904
sharp_limit = 2.0
round_precision = 8

[node name="TeleportImpact" type="Sprite" parent="." index="3"]

visible = false
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="CleanUpTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.05
one_shot = false
autostart = false

[node name="Particles2D" type="Particles2D" parent="." index="5"]

scale = Vector2( 0.35, 0.35 )
z_index = 30
emitting = false
amount = 10
lifetime = 0.4
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.6
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 5 )
texture = ExtResource( 3 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Textures", "Time", "Transform", "Z Index" ]

[node name="SfxPlayer" parent="." index="6" instance=ExtResource( 4 )]

stream = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]


